[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/StartLevel.gd" type="Script" id=1]
[ext_resource path="res://menu/BaseText.tres" type="DynamicFont" id=2]

[node name="StartLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 104.0
margin_top = 52.0
margin_right = 216.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "A Vampire Run!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 112.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 112.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 18 )

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "Start Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 112.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 18 )

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "Quit Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
